--- a/index.html
+++ b/index.html
@@ -118,12 +118,13 @@ body {
         <main class="content">
             <!-- Hero Section -->
             <section class="bg-card shadow-sm p-6 mb-8 rounded-lg flex flex-col items-center text-center">
-                <h2 class="text-3xl font-bold mb-4">Welcome to TalkNet</h2>
-                <p class="text-muted-foreground mb-8">Engage in discussions, share knowledge, and connect with like-minded <br> individuals on our vibrant TalkNet platform.</p>
+                <h2 class="text-7xl font-bold mb-6">Welcome to TalkNet</h2>
+                <p class="text-2xl text-muted-foreground mb-10">Engage in discussions, share knowledge, and connect with like-minded <br> individuals on our vibrant TalkNet platform.</p>                
                 <div class="bg-muted p-8 rounded-lg w-full max-w-xl">
-                    <img src="/path/to/your/image.png" alt="TalkNet Image" class="rounded-lg shadow-lg mx-auto">
+                    <img src="/Image.png" alt="TalkNet Image" class="rounded-lg shadow-lg mx-auto" style="width: 100%; height: auto; object-fit: cover; border-radius: 1rem;">
                 </div>
             </section>
+            
 
             <!-- Posts Grid -->
             <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 p-4 md:p-6">
