--- a/Login.html
+++ b/Login.html
@@ -12,7 +12,7 @@
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title text-2xl">Login</h2>
-                    <p class="card-description">Enter Username & Password to access <span class="TechTalk">TechTalk</span> Timeline.</p>
+                    <p class="card-description">Enter Username & Password to access <span class="TechTalk">TechTalk.</span></p>
                 </div>
                 <div class="card-content space-y-4">
                     <div class="space-y-2">
