--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@
           </a>
           <nav class="hidden md:flex items-center">
             <a
-              href="#AddPost"
+              href="/post"
               class="text-muted-foreground hover:text-card-foreground mx-5"
             >
               <i class="fas fa-plus text-lg"></i>
