--- a/static/new-post.html
+++ b/static/new-post.html
@@ -4,21 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create New Post</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
-    <h2>Create New Post</h2>
-    <form action="/new-post" method="POST">
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required>
-        <br>
-        <label for="content">Content:</label>
-        <textarea id="content" name="content" required></textarea>
-        <br>
-        <label for="categories">Categories (comma separated):</label>
-        <input type="text" id="categories" name="categories">
-        <br>
-        <button type="submit">Create Post</button>
-    </form>
-    <p><a href="/">Back to Home</a></p>
+    <div class="container">
+        <h1>Create a New Post</h1>
+        <form action="/submit_post" method="POST">
+            <div class="form-group">
+                <label for="title">Title:</label>
+                <input type="text" id="title" name="title" required>
+            </div>
+            <div class="form-group">
+                <label for="content">Content:</label>
+                <textarea id="content" name="content" rows="10" required></textarea>
+            </div>
+            <div class="form-group">
+                <label>Categories:</label>
+                <div class="checkbox-group">
+                    {{ range .AllCategories }}
+                     <label><input type="checkbox" name="category[]" value="general"> {{.Name}}</label>
+                    {{ end }}
+                </div>
+            </div>
+            <button type="submit">Submit Post</button>
+        </form>
+    </div>
 </body>
 </html>
