add Post functionality

--- a/static/index.html
+++ b/static/index.html
@@ -26,6 +26,8 @@
             <span>TechTalk</span>
           </a>
           <nav class="hidden md:flex items-center">
+            {{if .StaticData.IsLoggedIn}}
+
             <a
               href="/post"
               class="text-muted-foreground hover:text-card-foreground mx-5"
@@ -41,12 +43,21 @@
               <span class="sr-only">Profile</span>
             </a>
             <a
-              href="#Login"
+              href="/logout"
               class="text-muted-foreground hover:text-card-foreground mx-5"
             >
               <i class="fas fa-sign-in-alt text-lg"></i>
               <span class="sr-only">Login</span>
             </a>
+            {{else}}
+            <a
+              href="/login"
+              class="text-muted-foreground hover:text-card-foreground mx-5"
+            >
+              <i class="fas fa-sign-in-alt text-lg"></i>
+              <span class="sr-only">Login</span>
+            </a>
+            {{end}}
           </nav>
           <div class="md:hidden">
             <button class="variant-ghost size-icon">
