--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
-    <link rel="stylesheet" href="/static/index.css" />
+    <link rel="stylesheet" href="/static/styles/index.css" />
   </head>
   <body class="antialiased">
     <div class="flex flex-col min-h-screen">
@@ -82,7 +82,7 @@
           </p>
           <div class="bg-muted p-8 rounded-lg w-full max-w-xl">
             <img
-              src="/static/Image.png"
+              src="static/images/techtalk.png"
               alt="TechTalk Image"
               class="rounded-lg shadow-lg mx-auto"
               style="
