--- a/static/pages/Profile.html
+++ b/static/pages/Profile.html
@@ -26,21 +26,21 @@
           </a>
           <nav class="hidden md:flex items-center">
             <a
-              href="#AddPost"
+              href="/post"
               class="text-muted-foreground hover:text-card-foreground mx-5"
             >
               <i class="fas fa-plus text-lg"></i>
               <span class="sr-only">Add Post</span>
             </a>
             <a
-              href="#Profile"
+              href="/static/pages/Profile.html"
               class="text-muted-foreground hover:text-card-foreground mx-5"
             >
               <i class="fas fa-user text-lg"></i>
               <span class="sr-only">Profile</span>
             </a>
             <a
-              href="#Login"
+              href="/Login"
               class="text-muted-foreground hover:text-card-foreground mx-5"
             >
               <i class="fas fa-sign-in-alt text-lg"></i>
