--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -36,7 +36,7 @@
               <span class="sr-only">Add Post</span>
             </a>
             <a
-              href="#Profile"
+              href="/static/pages/Profile.html"
               class="text-muted-foreground hover:text-card-foreground mx-5"
             >
               <i class="fas fa-user text-lg"></i>
@@ -82,7 +82,7 @@
           </p>
           <div class="bg-muted p-8 rounded-lg w-full max-w-xl">
             <img
-              src="static/images/techtalk.png"
+              src="/static/images/Image.png"
               alt="TechTalk Image"
               class="rounded-lg shadow-lg mx-auto"
               style="
