changed to talknet

--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechTalk</title>
+    <title>Talknet</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -23,7 +23,7 @@
             class="flex items-center gap-2 text-lg font-semibold text-card-foreground"
           >
             <div class="w-6 h-6 text-[#6366F1]"></div>
-            <span>TechTalk</span>
+            <span>Talknet</span>
           </a>
           <nav class="hidden md:flex items-center">
             {{if .StaticData.IsLoggedIn}}
@@ -74,16 +74,16 @@
         <section
           class="bg-card shadow-sm p-6 mb-8 rounded-lg flex flex-col items-center text-center"
         >
-          <h2 class="text-7xl font-bold mb-6">Welcome to TechTalk</h2>
+          <h2 class="text-7xl font-bold mb-6">Welcome to Talknet</h2>
           <p class="text-2xl text-muted-foreground mb-10">
             Engage in discussions, share knowledge, and connect with like-minded
             <br />
-            individuals on our vibrant TechTalk platform.
+            individuals on our vibrant Talknet platform.
           </p>
           <div class="bg-muted p-8 rounded-lg w-full max-w-xl">
             <img
               src="/static/images/Image.png"
-              alt="TechTalk Image"
+              alt="Talknet Image"
               class="rounded-lg shadow-lg mx-auto"
               style="
                 width: 100%;
@@ -174,7 +174,7 @@
         <div
           class="container mx-auto flex justify-between items-center p-4 md:p-6 text-muted-foreground"
         >
-          <p>&copy; 2024 TechTalk. All rights reserved.</p>
+          <p>&copy; 2024 Talknet. All rights reserved.</p>
           <div class="flex gap-4">
             <a href="#Terms" class="hover:text-card-foreground hover:underline"
               >Terms of Service</a
