--- a/static/pages/Profile.html
+++ b/static/pages/Profile.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechTalk</title>
+    <title>Talknet</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       rel="stylesheet"
@@ -22,7 +22,7 @@
             class="flex items-center gap-2 text-lg font-semibold text-card-foreground"
           >
             <div class="w-6 h-6 text-[#6366F1]"></div>
-            <span>TechTalk</span>
+            <span>Talknet</span>
           </a>
           <nav class="hidden md:flex items-center">
             <a
@@ -279,7 +279,7 @@
       <!-- Footer -->
       <footer class="bg-gray-800 text-white py-4">
         <div class="container mx-auto text-center">
-          <p class="text-sm">&copy; 2024 TechTalk. All rights reserved.</p>
+          <p class="text-sm">&copy; 2024 Talknet. All rights reserved.</p>
         </div>
       </footer>
     </div>
