--- a/static/pages/SignUp.html
+++ b/static/pages/SignUp.html
@@ -47,7 +47,7 @@
     <!-- Footer -->
     <footer class="footer mt-8">
         <div class="footer-container container mx-auto">
-            <p>&copy; 2024 TechTalk. All rights reserved.</p>
+            <p>&copy; 2024 Talknet. All rights reserved.</p>
             <div class="footer-right footer-links">
                 <a href="#Terms">Terms of Service</a>
                 <a href="#Policy">Privacy Policy</a>
