--- a/static/pages/login.html
+++ b/static/pages/login.html
@@ -13,7 +13,7 @@
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title text-2xl">Login</h2>
-                    <p class="card-description">Enter Username & Password to access <span class="TechTalk">TechTalk.</span></p>
+                    <p class="card-description">Enter Username & Password to access <span class="Talknet">Talknet.</span></p>
                 </div>
                 <div class="card-content space-y-4">
                     <div class="space-y-2">
@@ -43,7 +43,7 @@
     <!-- Footer -->
     <footer class="footer mt-8">
         <div class="footer-container container mx-auto">
-            <p>&copy; 2024 TechTalk. All rights reserved.</p>
+            <p>&copy; 2024 Talknet. All rights reserved.</p>
             <div class="footer-right footer-links">
                 <a href="#Terms">Terms of Service</a>
                 <a href="#Policy">Privacy Policy</a>
