--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -1,155 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Talknet</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-    <link rel="stylesheet" href="/static/styles/index.css" />
-  </head>
-  <body class="antialiased">
-    <div class="flex flex-col min-h-screen">
-      <!-- Navbar -->
-      <header class="navbar">
-        <div class="container mx-auto flex items-center justify-between h-16 px-4 md:px-6">
-          <a href="#Logo" class="flex items-center gap-2 text-lg font-semibold text-card-foreground">
-            <div class="w-6 h-6 text-[#6366F1]"></div>
-            <span>Talknet</span>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Talknet</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <link rel="stylesheet" href="/static/styles/index.css" />
+</head>
+<body class="antialiased">
+  <div class="flex flex-col min-h-screen">
+    <!-- Navbar -->
+    <header class="navbar">
+      <div class="container mx-auto flex items-center justify-between h-16 px-4 md:px-6">
+        <a href="#Logo" class="flex items-center gap-2 text-lg font-semibold text-card-foreground">
+          <div class="w-6 h-6 text-[#6366F1]"></div>
+          <span>Talknet</span>
+        </a>
+        <nav class="hidden md:flex items-center">
+          {{if .StaticData.IsLoggedIn}}
+          <a href="/post" class="text-muted-foreground hover:text-card-foreground mx-5">
+            <i class="fas fa-plus text-lg"></i>
+            <span class="sr-only">Add Post</span>
           </a>
-          <nav class="hidden md:flex items-center">
-            {{if .StaticData.IsLoggedIn}}
-            <a href="/post" class="text-muted-foreground hover:text-card-foreground mx-5">
-              <i class="fas fa-plus text-lg"></i>
-              <span class="sr-only">Add Post</span>
-            </a>
-            <a href="/static/pages/Profile.html" class="text-muted-foreground hover:text-card-foreground mx-5">
-              <i class="fas fa-user text-lg"></i>
-              <span class="sr-only">Profile</span>
-            </a>
-            <a href="/logout" class="text-muted-foreground hover:text-card-foreground mx-5">
-              <i class="fas fa-sign-in-alt text-lg"></i>
-              <span class="sr-only">Login</span>
-            </a>
-            {{else}}
-            <a href="/login" class="text-muted-foreground hover:text-card-foreground mx-5">
-              <i class="fas fa-sign-in-alt text-lg"></i>
-              <span class="sr-only">Login</span>
-            </a>
-            {{end}}
-          </nav>
-          <div class="md:hidden">
-            <button class="variant-ghost size-icon">
-              <div class="w-6 h-6 text-card-foreground"></div>
-              <span class="sr-only">Toggle menu</span>
-            </button>
-          </div>
+          <a href="/static/pages/Profile.html" class="text-muted-foreground hover:text-card-foreground mx-5">
+            <i class="fas fa-user text-lg"></i>
+            <span class="sr-only">Profile</span>
+          </a>
+          <a href="/logout" class="text-muted-foreground hover:text-card-foreground mx-5">
+            <i class="fas fa-sign-in-alt text-lg"></i>
+            <span class="sr-only">Logout</span>
+          </a>
+          {{else}}
+          <a href="/login" class="text-muted-foreground hover:text-card-foreground mx-5">
+            <i class="fas fa-sign-in-alt text-lg"></i>
+            <span class="sr-only">Login</span>
+          </a>
+          {{end}}
+        </nav>
+        <div class="md:hidden">
+          <button class="variant-ghost size-icon">
+            <div class="w-6 h-6 text-card-foreground"></div>
+            <span class="sr-only">Toggle menu</span>
+          </button>
         </div>
-      </header>
+      </div>
+    </header>
 
-      <!-- Content -->
-      <main class="content">
-        <!-- Hero Section -->
-        <section class="bg-card shadow-sm p-6 mb-8 rounded-lg flex flex-col items-center text-center">
-          <h2 class="text-7xl font-bold mb-6">Welcome to Talknet</h2>
-          <p class="text-2xl text-muted-foreground mb-10">
-            Engage in discussions, share knowledge, and connect with like-minded
-            <br />
-            individuals on our vibrant Talknet platform.
-          </p>
-          <div class="bg-muted p-8 rounded-lg w-full max-w-xl">
-            <img
-              src="/static/images/Image.png"
-              alt="Talknet Image"
-              class="rounded-lg shadow-lg mx-auto"
-              style="width: 100%; height: auto; object-fit: cover; border-radius: 1rem;"
-            />
-          </div>
-        </section>
-
-        <div class="container mx-auto p-4 md:p-6">
-          <div class="flex flex-wrap gap-3">
-            <button class="category-button">All</button>
-            {{ range .StaticData.AllCategories }}
-            <button class="category-button">{{ .Name }}</button>
-            {{ end }}
-          </div>
+    <!-- Content -->
+    <main class="content">
+      <!-- Hero Section -->
+      <section class="bg-card shadow-sm p-6 mb-8 rounded-lg flex flex-col items-center text-center">
+        <h2 class="text-7xl font-bold mb-6">Welcome to Talknet</h2>
+        <p class="text-2xl text-muted-foreground mb-10">
+          Engage in discussions, share knowledge, and connect with like-minded
+          <br />
+          individuals on our vibrant Talknet platform.
+        </p>
+        <div class="bg-muted p-8 rounded-lg w-full max-w-xl">
+          <img src="/static/images/Image.png" alt="Talknet Image" class="rounded-lg shadow-lg mx-auto" style="width: 100%; height: auto; object-fit: cover; border-radius: 1rem;" />
         </div>
+      </section>
 
-        <!-- Posts Grid -->
-        <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 p-4 md:p-6">
-          <!-- Post 1 -->
-          {{ range .Posts }}
-          <div class="bg-card rounded-lg shadow-lg border border-muted overflow-hidden card">
-            <div class="p-4">
-              <h2 class="text-xl font-bold">
-                <a href="#Title" class="hover:underline text-card-foreground">{{ .Title }}</a>
-              </h2>
-              <div class="flex items-center gap-2 text-sm text-muted-foreground">
-                <div>
-                  <a href="#User" class="font-medium hover:underline text-muted-foreground">{{ .Username }}</a>
-                </div>
-                <div>·</div>
-                <div>{{ .CreatedAt }}</div>
-              </div>
-              <div class="flex items-center gap-2 mt-2">
-                {{ range .PostCategories }}
-                <a href="#Category" class="category-label">{{ .Name }}</a>
-                {{ end }}
-              </div>
-              <div class="card-content">
-                <p>{{ .Content }}</p>
-              </div>
-            </div>
-
-            <div class="p-4 border-t card-footer">
-              <div class="flex items-center justify-between">
-                <div class="flex items-center gap-2">
-                  <button class="variant-ghost size-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                      <path d="M7 10v12" />
-                      <path d="M15 5.88L14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2h0a3.13 3.13 0 0 1 3 3.88Z" />
-                    </svg>
-                    <span class="sr-only">Like</span>
-                  </button>
-                  <span class="text-sm text-muted-foreground">{{ .LikeCount }}</span>
-                  <button class="variant-ghost size-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                      <path d="M17 14V2" />
-                      <path d="M9 18.12L10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22h0a3.13 3.13 0 0 1-3-3.88Z" />
-                    </svg>
-                    <span class="sr-only">Dislike</span>
-                  </button>
-                  <span class="text-sm text-muted-foreground">{{ .DislikeCount }}</span>
-                  <button class="variant-ghost size-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                      <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z" />
-                    </svg>
-                    <span class="sr-only">Comment</span>
-                  </button>
-                  <span class="text-sm text-muted-foreground">{{ .CommentCount }}</span>
-                </div>
-              </div>
-            </div>
-          </div>
+      <div class="container mx-auto p-4 md:p-6">
+        <div class="flex flex-wrap gap-3">
+          <button class="category-button">All</button>
+          {{ range .StaticData.AllCategories }}
+          <button class="category-button">{{ .Name }}</button>
           {{ end }}
         </div>
-      </main>
+      </div>
 
-      <!-- Footer -->
-      <footer class="bg-card border-t shadow-sm">
-        <div class="container mx-auto flex justify-between items-center p-4 md:p-6 text-muted-foreground">
-          <p>&copy; 2024 Talknet. All rights reserved.</p>
-          <div class="flex gap-4">
-            <a href="#Terms" class="hover:text-card-foreground hover:underline">Terms of Service</a>
-            <a href="#Policy" class="hover:text-card-foreground hover:underline">Privacy Policy</a>
-            <a href="#ContactUs" class="hover:text-card-foreground hover:underline">Contact Us</a>
+      <!-- Posts Grid -->
+      <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 p-4 md:p-6">
+        {{ range .Posts }}
+        <div class="bg-card rounded-lg shadow-lg border border-muted overflow-hidden card">
+          <div class="p-4">
+            <h2 class="text-xl font-bold">
+              <a href="#Title" class="hover:underline text-card-foreground">{{ .Title }}</a>
+            </h2>
+            <div class="flex items-center gap-2 text-sm text-muted-foreground">
+              <div>
+                <a href="#User" class="font-medium hover:underline text-muted-foreground">{{ .Username }}</a>
+              </div>
+              <div>·</div>
+              <div>{{ .CreatedAt }}</div>
+            </div>
+            <div class="flex items-center gap-2 mt-2">
+              {{ range .PostCategories }}
+              <a href="#Category" class="category-label">{{ .Name }}</a>
+              {{ end }}
+            </div>
+            <div class="card-content">
+              <p>{{ .Content }}</p>
+            </div>
           </div>
+
+          <div class="p-4 border-t card-footer">
+            <div class="flex items-center justify-between">
+              <div class="flex items-center gap-2">
+                <button id="like-btn-{{ .ID }}" class="variant-ghost size-icon" data-post-id="{{ .ID }}">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M7 10v12" />
+                    <path d="M15 5.88L14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2h0a3.13 3.13 0 0 1 3 3.88Z" />
+                  </svg>
+                  <span class="sr-only">Like</span>
+                </button>
+                <span id="like-count-{{ .ID }}" class="text-sm text-muted-foreground">{{ .LikeCount }}</span>
+
+                <button class="variant-ghost size-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z" />
+                  </svg>
+                  <span class="sr-only">Comment</span>
+                </button>
+                <span class="text-sm text-muted-foreground">{{ .CommentCount }} comments</span>
+              </div>
+            </div>
+          </div>
+
+          <!-- Comments Section -->
+          <div class="p-4 border-t comments-section">
+            <h3 class="text-lg font-semibold mb-4">Comments</h3>
+            {{ if .Comments }}
+              <ul class="space-y-4">
+                {{ range .Comments }}
+                <li class="flex flex-col border-b pb-2">
+                  <div class="flex justify-between items-center text-sm">
+                    <span class="font-medium text-muted-foreground">{{ .Username }}</span>
+                    <span class="text-xs text-muted">{{ .CreatedAt }}</span>
+                  </div>
+                  <p class="text-muted-foreground">{{ .Content }}</p>
+                </li>
+                {{ end }}
+              </ul>
+            {{ else }}
+              <p class="text-muted-foreground">No comments yet. Be the first to comment!</p>
+            {{ end }}
+          </div>
+
+          <!-- Add Comment Form -->
+          {{ if .StaticData.IsLoggedIn }}
+          <div class="p-4 border-t add-comment-section">
+            <form action="/comment" method="POST">
+              <input type="hidden" name="post_id" value="{{ .ID }}" />
+              <textarea name="content" rows="3" class="w-full p-2 border border-muted rounded-md mb-4" placeholder="Write a comment..."></textarea>
+              <button type="submit" class="bg-primary text-white px-4 py-2 rounded-lg">Post Comment</button>
+            </form>
+          </div>
+          {{ else }}
+          <p class="p-4 border-t text-muted-foreground">Log in to add a comment.</p>
+          {{ end }}
         </div>
-      </footer>
-    </div>
-  </body>
+        {{ end }}
+      </div>
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-card border-t shadow-sm">
+      <div class="container mx-auto flex justify-between items-center p-4 md:p-6 text-muted-foreground">
+        <p>&copy; 2024 Talknet. All rights reserved.</p>
+        <div class="flex gap-4">
+          <a href="#Terms" class="hover:text-card-foreground hover:underline">Terms of Service</a>
+          <a href="#Policy" class="hover:text-card-foreground hover:underline">Privacy Policy</a>
+          <a href="#Support" class="hover:text-card-foreground hover:underline">Support</a>
+        </div>
+      </div>
+    </footer>
+  </div>
+
+  <!-- JavaScript -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      document.querySelectorAll('[id^="like-btn-"]').forEach(button => {
+        button.addEventListener('click', async function () {
+          const postId = this.dataset.postId;
+          try {
+            const response = await fetch(`/like/${postId}`, { method: 'POST' });
+            const data = await response.json();
+            document.getElementById(`like-count-${postId}`).textContent = data.likeCount;
+          } catch (error) {
+            console.error('Error:', error);
+          }
+        });
+      });
+    });
+  </script>
+</body>
 </html>
