--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -102,7 +102,7 @@
       </div>
       <div class="flex items-center gap-2 mt-2">
         {{ range .PostCategories }}
-        <a href="#Category" class="category-label">{{ .Name }}</a>
+        <a class="category-label">{{ .Name }}</a>
         {{ end }}
       </div>
       <div class="card-content">
