--- a/static/pages/login.html
+++ b/static/pages/login.html
@@ -18,11 +18,11 @@
                 <div class="card-content space-y-4">
                     <div class="space-y-2">
                         <label for="username">Username</label>
-                        <input id="username" type="text" placeholder="Leo Messi" required>
+                        <input id="username" name="username" type="text" placeholder="Leo Messi" required>
                     </div>
                     <div class="space-y-2">
                         <label for="password">Password</label>
-                        <input id="password" type="password" placeholder="••••••••" required>
+                        <input id="password" name="password" type="password" placeholder="••••••••" required>
                     </div>
                     <div class="checkbox-container">
                         <input id="show-password" type="checkbox">
