--- a/static/pages/SignUp.html
+++ b/static/pages/SignUp.html
@@ -18,15 +18,15 @@
                 <div class="card-content space-y-4">
                     <div class="space-y-2">
                         <label for="username">Username</label>
-                        <input id="username" type="text" placeholder="Leo Messi" required>
+                        <input id="username" type="text" placeholder="Leo Messi" name="username" required>
                     </div>
                     <div class="space-y-2">
                         <label for="email">Email</label>
-                        <input id="email" type="email" placeholder="Messi@Bolga.com" required>
+                        <input id="email" type="email" placeholder="Messi@Bolga.com" name="email" required>
                     </div>
                     <div class="space-y-2">
                         <label for="password">Password</label>
-                        <input id="password" type="password" placeholder="••••••••" required>
+                        <input id="password" type="password" placeholder="••••••••" name="password" required>
                     </div>
                     <div class="checkbox-container">
                         <input id="show-password" type="checkbox">
