--- a/static/pages/Profile.html
+++ b/static/pages/Profile.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <link rel="stylesheet" href="/static/styles/index.css" />
   </head>
   <body class="antialiased">
     <div class="flex flex-col min-h-screen">
@@ -68,212 +69,59 @@
         <div
           class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 p-4 md:p-6"
         >
-          <!-- Post 1 -->
-          <div
-            class="bg-card rounded-lg shadow-lg border border-muted overflow-hidden"
-          >
-            <div class="p-4">
-              <h2 class="text-xl font-bold">
-                <a href="#Title" class="hover:underline text-card-foreground"
-                  >How to build a React app from scratch</a
-                >
-              </h2>
-              <div
-                class="flex items-center gap-2 text-sm text-muted-foreground"
-              >
-                <div>
-                  <a
-                    href="#User"
-                    class="font-medium hover:underline text-muted-foreground"
-                    >John Doe</a
-                  >
+        {{ range . }}
+        <div class="bg-card rounded-lg shadow-lg border border-muted overflow-hidden card" data-post-id="{{.ID}}" data-categories="{{range .PostCategories}}{{.Name}},{{end}}">
+            <div class="relative">
+                <!-- Card Content -->
+                <div class="p-4">
+                    <h2 class="text-xl font-bold">
+                        <span class="hover:underline text-card-foreground">{{ .Title }}</span>
+                    </h2>
+                    <div class="flex items-center gap-2 text-sm text-muted-foreground">
+                        <div>
+                            <a class="font-medium hover:underline text-muted-foreground">{{ .Username }}</a>
+                        </div> 
+                        <div>·</div>
+                        <div>{{ .CreatedAt }}</div>
+                    </div>
+                    <div class="flex items-center gap-2 mt-2">
+                        {{ range .PostCategories }}
+                        <a class="category-label">{{ .Name }}</a>
+                        {{ end }}
+                    </div>
+                    <div class="card-content">
+                        <p>{{ .Content }}</p>
+                    </div>
                 </div>
-                <div>·</div>
-                <div>2 hours ago</div>
-              </div>
-              <div class="flex items-center gap-2 mt-2">
-                <a href="#Category" class="category-label">React</a>
-                <a href="#Category" class="category-label">Tutorial</a>
-              </div>
+                <div class="p-4 border-t card-footer">
+                    <div class="flex items-center justify-between">
+                        <div class="flex items-center gap-2">
+                            <label id="like-label-{{.ID}}" class="like-button {{if eq .Reaction 1}}text-blue-500{{end}}">
+                                <input type="radio" name="like_dislike" value="like" class="sr-only">
+                                <i class="fas fa-thumbs-up" id="like-button-{{.ID}}"></i>
+                                <span id="like-count-{{.ID}}" class="text-sm text-muted-foreground">{{ .LikeCount }}</span>
+                            </label>
+                            
+                            <label id="dislike-label-{{.ID}}" class="dislike-button {{if eq .Reaction 0}}text-red-500{{end}}">
+                                <input type="radio" name="like_dislike" value="dislike" class="sr-only">
+                                <i class="fas fa-thumbs-down" id="dislike-button-{{.ID}}"></i>
+                                <span id="dislike-count-{{.ID}}" class="text-sm text-muted-foreground">{{ .DislikeCount }}</span>
+                            </label>
+                            
+                            <!-- Comment Icon -->
+                            <button class="variant-ghost size-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z" />
+                                </svg>
+                                <span class="sr-only">Comment</span>
+                            </button>
+                            <span class="text-sm text-muted-foreground">{{ .CommentCount }}</span>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <div class="p-4 border-t">
-              <p>
-                In this tutorial, we'll walk through the steps to build a React
-                app from the ground up. We'll cover setting up a development
-                environment, creating components, managing state, and more.
-              </p>
-            </div>
-            <div class="p-4 border-t flex items-center justify-between">
-              <div class="flex items-center gap-2">
-                <button class="variant-ghost size-icon">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path d="M7 10v12" />
-                    <path
-                      d="M15 5.88L14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2h0a3.13 3.13 0 0 1 3 3.88Z"
-                    />
-                  </svg>
-                  <span class="sr-only">Like</span>
-                </button>
-                <span class="text-sm text-muted-foreground">123</span>
-                <button class="variant-ghost size-icon">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path d="M17 14V2" />
-                    <path
-                      d="M9 18.12L10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22h0a3.13 3.13 0 0 1-3-3.88Z"
-                    />
-                  </svg>
-                  <span class="sr-only">Dislike</span>
-                </button>
-                <span class="text-sm text-muted-foreground">45</span>
-                <button class="variant-ghost size-icon">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z" />
-                  </svg>
-                  <span class="sr-only">Comment</span>
-                </button>
-                <span class="text-sm text-muted-foreground">12</span>
-              </div>
-            </div>
-          </div>
-
-          <!-- Repeat similar structure for other posts -->
         </div>
-
-        <h1 class="text-2xl font-bold mb-4">Likes</h1>
-        <div
-          class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 p-4 md:p-6"
-        >
-          <!-- Comment 1 -->
-          <div
-            class="bg-card rounded-lg shadow-lg border border-muted overflow-hidden"
-          >
-            <div class="p-4">
-              <h2 class="text-xl font-bold">
-                <a href="#Title" class="hover:underline text-card-foreground"
-                  >How to build a React app from scratch</a
-                >
-              </h2>
-              <div
-                class="flex items-center gap-2 text-sm text-muted-foreground"
-              >
-                <div>
-                  <a
-                    href="#User"
-                    class="font-medium hover:underline text-muted-foreground"
-                    >John Doe</a
-                  >
-                </div>
-                <div>·</div>
-                <div>2 hours ago</div>
-              </div>
-              <div class="flex items-center gap-2 mt-2">
-                <a href="#Category" class="category-label">React</a>
-                <a href="#Category" class="category-label">Tutorial</a>
-              </div>
-            </div>
-
-            <div class="p-4 border-t">
-              <p>
-                In this tutorial, we'll walk through the steps to build a React
-                app from the ground up. We'll cover setting up a development
-                environment, creating components, managing state, and more.
-              </p>
-            </div>
-            <div class="p-4 border-t flex items-center justify-between">
-              <div class="flex items-center gap-2">
-                <button class="variant-ghost size-icon">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path d="M7 10v12" />
-                    <path
-                      d="M15 5.88L14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2h0a3.13 3.13 0 0 1 3 3.88Z"
-                    />
-                  </svg>
-                  <span class="sr-only">Like</span>
-                </button>
-                <span class="text-sm text-muted-foreground">123</span>
-                <button class="variant-ghost size-icon">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path d="M17 14V2" />
-                    <path
-                      d="M9 18.12L10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22h0a3.13 3.13 0 0 1-3-3.88Z"
-                    />
-                  </svg>
-                  <span class="sr-only">Dislike</span>
-                </button>
-                <span class="text-sm text-muted-foreground">45</span>
-                <button class="variant-ghost size-icon">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z" />
-                  </svg>
-                  <span class="sr-only">Comment</span>
-                </button>
-                <span class="text-sm text-muted-foreground">12</span>
-              </div>
-            </div>
-          </div>
-
-          <!-- Repeat similar structure for other comments -->
+        {{ end }}
         </div>
       </main>
       <!-- Footer -->
@@ -283,5 +131,7 @@
         </div>
       </footer>
     </div>
+    <script src="/static/js/filter.js"></script>
+    <script src="/static/js/like-dislike.js"></script>
   </body>
 </html>
