--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -23,7 +23,7 @@
                         <i class="fas fa-plus text-lg"></i>
                         <span class="sr-only">Add Post</span>
                     </a>
-                    <a href="/static/pages/Profile.html" class="text-muted-foreground hover:text-card-foreground mx-5">
+                    <a href="/profile" class="text-muted-foreground hover:text-card-foreground mx-5">
                         <i class="fas fa-user text-lg"></i>
                         <span class="sr-only">Profile</span>
                     </a>
