--- a/static/pages/new-post.html
+++ b/static/pages/new-post.html
@@ -4,29 +4,132 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create New Post</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link rel="stylesheet" href="/static/styles/index.css" />
+    <style>
+        .category-button {
+            background-color: hsl(var(--primary));
+            color: hsl(var(--primary-foreground));
+            padding: 0.5rem 1rem;
+            border-radius: 9999px;
+            font-size: 0.875rem;
+            font-weight: 500;
+            border: 1px solid hsl(var(--border));
+            transition: background-color 0.2s ease, color 0.2s ease;
+        }
+
+        .category-button.selected {
+            background-color: hsl(var(--secondary));
+            color: hsl(var(--secondary-foreground));
+        }
+
+        /* Custom styles for title and content */
+        .input-title {
+            font-size: 1.5rem; /* Increase font size */
+            font-weight: 700; /* Make text bold */
+        }
+
+        .input-content {
+            font-size: 1.125rem; /* Increase font size */
+            font-weight: 500; /* Make text bold */
+        }
+    </style>
 </head>
-<body>
-    <div class="container">
-        <h1>Create a New Post</h1>
-        <form action="/post" method="POST">
-            <div class="form-group">
-                <label for="title">Title:</label>
-                <input type="text" id="title" name="title" required>
-            </div>
-            <div class="form-group">
-                <label for="content">Content:</label>
-                <textarea id="content" name="content" rows="10" required></textarea>
-            </div>
-            <div class="form-group">
-                <label>Categories:</label>
-                <div class="checkbox-group">
-                    {{ range .AllCategories }}
-                    <label><input type="checkbox" name="category[]" value="{{.ID}}"> {{.Name}}</label>
-                    {{ end }}
+<body class="antialiased">
+    <div class="flex flex-col min-h-screen">
+        <!-- Navbar -->
+        <header class="navbar">
+            <div class="container mx-auto flex items-center justify-between h-16 px-4 md:px-6">
+                <a class="flex items-center gap-2 text-lg font-semibold text-card-foreground">
+                    <div class="w-6 h-6 text-[#6366F1]"></div>
+                    <span>Talknet</span>
+                </a>
+                <nav class="hidden md:flex items-center">
+                    <a href="/post" class="text-muted-foreground hover:text-card-foreground mx-5">
+                        <i class="fas fa-plus text-lg"></i>
+                        <span class="sr-only">Add Post</span>
+                    </a>
+                    <a href="/static/pages/Profile.html" class="text-muted-foreground hover:text-card-foreground mx-5">
+                        <i class="fas fa-user text-lg"></i>
+                        <span class="sr-only">Profile</span>
+                    </a>
+                    <a href="/logout" class="text-muted-foreground hover:text-card-foreground mx-5">
+                        <i class="fas fa-sign-in-alt text-lg"></i>
+                        <span class="sr-only">Login</span>
+                    </a>
+                    <a href="/login" class="text-muted-foreground hover:text-card-foreground mx-5">
+                        <i class="fas fa-sign-in-alt text-lg"></i>
+                        <span class="sr-only">Login</span>
+                    </a>
+                </nav>
+                <div class="md:hidden">
+                    <button class="variant-ghost size-icon">
+                        <div class="w-6 h-6 text-card-foreground"></div>
+                        <span class="sr-only">Toggle menu</span>
+                    </button>
                 </div>
             </div>
-            <button type="submit">Submit Post</button>
-        </form>
+        </header>
+
+        <!-- Content -->
+        <main class="content flex-grow p-6">
+            <div class="container mx-auto">
+                <h1 class="text-3xl font-bold mb-6">Create a New Post</h1>
+                <form action="/post" method="POST" class="bg-card shadow-md rounded-lg p-6">
+                    <div class="form-group mb-4">
+                        <label for="title" class="block text-lg font-semibold text-muted-foreground">Title:</label>
+
+                        <input type="text" id="title" name="title" required class="mt-1 block w-full border border-muted rounded-lg p-2 input-title" />
+                    </div>
+                    <div class="form-group mb-4">
+                        <label for="content" class="block text-lg font-semibold text-muted-foreground">Content:</label>
+
+                        <textarea id="content" name="content" rows="10" required class="mt-1 block w-full border border-muted rounded-lg p-2 input-content"></textarea>
+                    </div>
+                    <div class="form-group mb-4">
+                        <label class="block text-lg font-semibold text-muted-foreground">Categories:</label>
+
+                        <div class="flex flex-wrap gap-3 mt-2">
+                            <input type="hidden" name="selectedCategories" id="selectedCategories">
+                            {{ range .AllCategories }}
+                            <button type="button" class="category-button" onclick="toggleCategory(this, '{{.ID}}')">{{ .Name }}</button>
+                            {{ end }}
+                        </div>
+                    </div>
+                    <button type="submit" class="w-full bg-blue-500 text-white font-semibold py-2 rounded-lg hover:bg-blue-600 transition duration-200">Submit Post</button>
+                </form>
+            </div>
+        </main>
+
+        <!-- Footer -->
+        <footer class="bg-card border-t shadow-sm">
+            <div class="container mx-auto flex justify-between items-center p-4 md:p-6 text-muted-foreground">
+                <p>&copy; 2024 Talknet. All rights reserved.</p>
+                <div class="flex gap-4">
+                    <a href="#Terms" class="hover:text-card-foreground hover:underline">Terms of Service</a>
+                    <a href="#Policy" class="hover:text-card-foreground hover:underline">Privacy Policy</a>
+                    <a href="#ContactUs" class="hover:text-card-foreground hover:underline">Contact Us</a>
+                </div>
+            </div>
+        </footer>
     </div>
+
+    <script>
+        function toggleCategory(button, categoryId) {
+            button.classList.toggle('selected');
+
+            const selectedCategoriesInput = document.getElementById('selectedCategories');
+            let selectedCategories = selectedCategoriesInput.value.split(',').filter(Boolean);
+
+            if (selectedCategories.includes(categoryId)) {
+                selectedCategories = selectedCategories.filter(id => id !== categoryId);
+            } else {
+                selectedCategories.push(categoryId);
+            }
+
+            selectedCategoriesInput.value = selectedCategories.join(',');
+        }
+    </script>
 </body>
 </html>
