profile without delete

--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -92,7 +92,7 @@
                             </h2>
                             <div class="flex items-center gap-2 text-sm text-muted-foreground">
                                 <div>
-                                    <a class="font-medium hover:underline text-muted-foreground">{{ .Username }}</a>
+                                    <a class="font-medium hover:underline text-muted-foreground" href="/profile?id={{.ID}}">{{ .Username }}</a>
                                 </div> 
                                 <div>·</div>
                                 <div>{{ .CreatedAt }}</div>
