--- a/static/pages/post-details.html
+++ b/static/pages/post-details.html
@@ -15,30 +15,17 @@
         }
         .navbar, .footer-bg {
             background-color: hsl(210, 100%, 97%);
-        }
+        }   
     </style>
 </head>
 <body class="antialiased flex flex-col min-h-screen">
     <!-- Navbar -->
     <header class="navbar shadow">
         <div class="container mx-auto flex items-center justify-between h-16 px-4 md:px-6">
-            <a class="flex items-center gap-2 text-lg font-semibold text-gray-800">
+            <a class="flex items-center gap-2 text-lg font-semibold text-gray-800" href="/">
                 <span>Talknet</span>
             </a>
-            <nav class="flex items-center">
-                <a href="/post" class="text-gray-600 hover:text-blue-600 mx-5">
-                    <i class="fas fa-plus"></i>
-                    <span class="sr-only">Add Post</span>
-                </a>
-                <a href="/static/pages/Profile.html" class="text-gray-600 hover:text-blue-600 mx-5">
-                    <i class="fas fa-user"></i>
-                    <span class="sr-only">Profile</span>
-                </a>
-                <a href="/logout" class="text-gray-600 hover:text-blue-600 mx-5">
-                    <i class="fas fa-sign-out-alt"></i>
-                    <span class="sr-only">Logout</span>
-                </a>
-            </nav>
+        
         </div>
     </header>
 
