--- a/static/pages/new-post.html
+++ b/static/pages/new-post.html
@@ -41,28 +41,11 @@
         <!-- Navbar -->
         <header class="navbar">
             <div class="container mx-auto flex items-center justify-between h-16 px-4 md:px-6">
-                <a class="flex items-center gap-2 text-lg font-semibold text-card-foreground">
+                <a class="flex items-center gap-2 text-lg font-semibold text-card-foreground" href="/">
                     <div class="w-6 h-6 text-[#6366F1]"></div>
                     <span>Talknet</span>
                 </a>
-                <nav class="hidden md:flex items-center">
-                    <a href="/post" class="text-muted-foreground hover:text-card-foreground mx-5">
-                        <i class="fas fa-plus text-lg"></i>
-                        <span class="sr-only">Add Post</span>
-                    </a>
-                    <a href="/static/pages/Profile.html" class="text-muted-foreground hover:text-card-foreground mx-5">
-                        <i class="fas fa-user text-lg"></i>
-                        <span class="sr-only">Profile</span>
-                    </a>
-                    <a href="/logout" class="text-muted-foreground hover:text-card-foreground mx-5">
-                        <i class="fas fa-sign-in-alt text-lg"></i>
-                        <span class="sr-only">Login</span>
-                    </a>
-                    <a href="/login" class="text-muted-foreground hover:text-card-foreground mx-5">
-                        <i class="fas fa-sign-in-alt text-lg"></i>
-                        <span class="sr-only">Login</span>
-                    </a>
-                </nav>
+                
                 <div class="md:hidden">
                     <button class="variant-ghost size-icon">
                         <div class="w-6 h-6 text-card-foreground"></div>
