--- a/static/pages/SignUp.html
+++ b/static/pages/SignUp.html
@@ -28,6 +28,8 @@
                         <label for="password">Password</label>
                         <input id="password" type="password" placeholder="••••••••" name="password" required>
                     </div>
+                    <p id="category-error-message" class="text-red-500 mt-2 " style="color: red;">{{.ErrorMsg}}</p>
+
                     <div class="checkbox-container">
                         <input id="show-password" type="checkbox">
                         <label for="show-password" class="cursor-pointer">Show Password</label>
