--- a/static/pages/login.html
+++ b/static/pages/login.html
@@ -24,6 +24,7 @@
                         <label for="password">Password</label>
                         <input id="password" name="password" type="password" placeholder="••••••••" required>
                     </div>
+                    <p id="category-error-message" class="text-red-500 mt-2 " style="color: red;">{{.ErrorMsg}}</p>
                     <div class="checkbox-container">
                         <input id="show-password" type="checkbox">
                         <label for="show-password" class="cursor-pointer">Show Password</label>
