--- a/static/pages/post-details.html
+++ b/static/pages/post-details.html
@@ -19,6 +19,7 @@
     </style>
 </head>
 <body class="antialiased flex flex-col min-h-screen">
+    <div id="hiddenDiv" style="display:none;">comment</div>
     <!-- Navbar -->
     <header class="navbar shadow">
         <div class="container mx-auto flex items-center justify-between h-16 px-4 md:px-6">
@@ -88,5 +89,7 @@
             </div>
         </div>
     </footer>
+    <script src="/static/js/filter.js"></script>
+    <script src="/static/js/like-dislike.js"></script>
 </body>
 </html>
