--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="/static/styles/index.css" />
 </head>
 <body class="antialiased">
+    <div id="hiddenDiv" style="display:none;">post</div>
+
     <div class="flex flex-col min-h-screen">
         <!-- Navbar -->
         <header class="navbar">
             <div class="container mx-auto flex items-center justify-between h-16 px-4 md:px-6">
-                <a class="flex items-center gap-2 text-lg font-semibold text-card-foreground">
+                <a class="flex items-center gap-2 text-lg font-semibold text-card-foreground" href="/">
                     <div class="w-6 h-6 text-[#6366F1]"></div>
                     <span>Talknet</span>
                 </a>
