Edit Profile Footer

--- a/static/pages/Profile.html
+++ b/static/pages/Profile.html
@@ -166,11 +166,18 @@
         </main>
         
         <!-- Footer -->
-        <footer class="bg-gray-800 text-white py-4">
-            <div class="container mx-auto text-center">
-                <p class="text-sm">&copy; 2024 Talknet. All rights reserved.</p>
-            </div>
-        </footer>
+     <!-- Footer -->
+<footer class="bg-card border-t shadow-sm">
+    <div class="container mx-auto flex justify-between items-center p-4 md:p-6 text-muted-foreground">
+        <p>&copy; 2024 Talknet. All rights reserved.</p>
+        <div class="flex gap-4">
+            <a href="#Terms" class="hover:text-card-foreground hover:underline">Terms of Service</a>
+            <a href="#Policy" class="hover:text-card-foreground hover:underline">Privacy Policy</a>
+            <a href="#ContactUs" class="hover:text-card-foreground hover:underline">Contact Us</a>
+        </div>
+    </div>
+</footer>
+
     </div>
     
     <!-- JavaScript for Toggling Posts -->
