--- a/static/pages/new-post.html
+++ b/static/pages/new-post.html
@@ -63,12 +63,12 @@
                     <div class="form-group mb-4">
                         <label for="title" class="block text-lg font-semibold text-muted-foreground">Title:</label>
 
-                        <input type="text" id="title" name="title" required class="mt-1 block w-full border border-muted rounded-lg p-2 input-title" />
+                        <input maxlength="50" type="text" id="title" name="title" required class="mt-1 block w-full border border-muted rounded-lg p-2 input-title" />
                     </div>
                     <div class="form-group mb-4">
                         <label for="content" class="block text-lg font-semibold text-muted-foreground">Content:</label>
 
-                        <textarea id="content" name="content" rows="10" required class="mt-1 block w-full border border-muted rounded-lg p-2 input-content"></textarea>
+                        <textarea maxlength="500" id="content" name="content" rows="10" required class="mt-1 block w-full border border-muted rounded-lg p-2 input-content"></textarea>
                     </div>
                     <div class="form-group mb-4">
                         <label class="block text-lg font-semibold text-muted-foreground">Categories:</label>
